# servant-auth-cookie

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  cryptonite-0.19.nix  cryptonite-0.20.nix  cryptonite-0.21.nix  default.nix  servant-auth-cookie.cabal  shell-profiling.nix  shell.nix  stack.yaml
.travis/: servant-0.11-cabal.config
benchmarks/: Main.hs
example/: AuthAPI.hs  FileKeySet.hs  Main.hs  Test.hs
src/Servant/Server/Experimental/Auth/: Cookie.hs
src/Servant/Server/Experimental/Auth/Cookie/: .Internal.hs.swp  Internal.hs
tests/: Main.hs  Utils.hs
